--- a/TA_07/index.html
+++ b/TA_07/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
   <head>
     <meta charset="utf-8">
@@ -7,11 +9,11 @@
   </head>
   <body>
     <nav>
-        <a>Home</a>
-        <a>About</a>
-        <a>News</a>
-        <a>Links</a>
-        <a>Contact</a>
+        <a href="https://github.com/fabinhoh13/ProgWeb">Home</a>
+        <a href="https://github.com/fabinhoh13/ProgWeb">About</a>
+        <a href="https://github.com/fabinhoh13/ProgWeb">News</a>
+        <a href="https://github.com/fabinhoh13/ProgWeb">Links</a>
+        <a href="https://github.com/fabinhoh13/ProgWeb">Contact</a>
     </nav>
     <header></header>
     <section>
@@ -19,6 +21,19 @@
       <p></p>
       <!-- Two column-type things --> 
       <div id="flex-container">
+        <div class="col">
+          <div class="lines">
+            <div class="lin">
+              LINHA 1
+            </div>
+            <div class="lin">
+              LINHA 2
+            </div>
+            <div class="lin">
+              LINHA 3
+            </div>
+          </div>
+        </div>
         <div class="col">
           <div class="lines">
             <div class="lin">
